--- a/Milestone2.ipynb
+++ b/Milestone2.ipynb
@@ -2,8 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8411070c-a233-40dd-ae92-7cd45340bb51",
+   "execution_count": null,
+   "id": "b66698ab-afc1-430e-825b-c9293b26060a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.decomposition import PCA\n",
+    "from scipy.cluster.hierarchy import dendrogram, linkage\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy.stats import zscore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9fbaebe-b8c2-4344-bf58-afaeb7e15dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "data = pd.read_csv(\"data.csv\")  # Update with the correct path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "addee5cf-6bac-4358-901a-7ad021612de1",
    "metadata": {},
    "outputs": [
     {
@@ -196,21 +228,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "from sklearn.decomposition import PCA\n",
-    "from scipy.cluster.hierarchy import dendrogram, linkage\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from scipy.stats import zscore\n",
-    "# Load dataset\n",
-    "data = pd.read_csv(\"data.csv\")  # Update with the correct path\n",
-    "\n",
     "# Step 1: Data Exploration and Visualization\n",
     "print(\"Dataset Information:\")\n",
     "data.info()\n",
@@ -337,7 +354,7 @@
     "\n",
     "# Observations on trends\n",
     "# - For KNN: As the number of neighbors increases, the training accuracy decreases while validation accuracy stabilizes.\n",
-    "# - For Decision Trees: Increasing tree depth improves training accuracy but may overfit, as seen in reduced validation accuracy at very high depths.\n"
+    "# - For Decision Trees: Increasing tree depth improves training accuracy but may overfit, as seen in reduced validation accuracy at very high depths."
    ]
   },
   {
