add commented iqr to z_score code

--- a/milestone1_Machine_learning_project.ipynb
+++ b/milestone1_Machine_learning_project.ipynb
@@ -365,7 +365,35 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
     "\n",
+    "# Calculate Q1, Q3, and IQR for each numeric column\n",
+    "for col in numeric_columns:\n",
+    "    # Calculate the first (Q1) and third (Q3) quartiles\n",
+    "    Q1 = data[col].quantile(0.25)\n",
+    "    Q3 = data[col].quantile(0.75)\n",
+    "    \n",
+    "    # Calculate the Interquartile Range (IQR)\n",
+    "    IQR = Q3 - Q1\n",
+    "    \n",
+    "    # Define the lower and upper bounds for outlier detection\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    \n",
+    "    # Identify outliers by checking which values are outside the bounds\n",
+    "    outliers = data[(data[col] < lower_bound) | (data[col] > upper_bound)]\n",
+    "    \n",
+    "    # Print the number of outliers detected in this column\n",
+    "    print(f\"Outliers in column '{col}': {len(outliers)}\")\n",
+    "    \n",
+    "    # Optionally, remove outliers (uncomment if you want to remove them)\n",
+    "    # data = data[(data[col] >= lower_bound) & (data[col] <= upper_bound)]\n",
+    "    \n",
+    "    # Alternatively, cap outliers instead of removing them (this step is already in your original code)\n",
+    "    data[col] = data[col].clip(lower=lower_bound, upper=upper_bound)\n",
+    "\n",
+    "# After processing all numeric columns, you can check the resulting dataset size\n",
+    "print(f\"Dataset size after handling outliers: {len(data)}\")\"\"\"\n",
     "\n",
     "# Assuming 'data' is your DataFrame and 'numeric_columns' contains the numeric columns you're interested in\n",
     "\n",
